# anki-patcher

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  readme.md
.github/: copilot-instructions.md
anki_patcher/: main.py  util.py
anki_patcher/patcher/: anki.py  patcher.py
anki_patcher/patcher/operations/: add_example.py  add_furigana.py  add_image.py  add_image_operation.py  add_tts.py  export_md.py  gpt.py  replace.py  replace_via_csv.py  (+2 more)
configs/: add_example.yml  add_furigana_vocab_sentence.yml  add_image_vocab.yml  add_tts_default.yml  export_md_kanji.yml  export_md_radical.yml  export_md_vocab.yml  gpt_add_kanji_mnemonic.yml  gpt_clean_furigana_brackets.yml  gpt_constituents_vocab.yml  gpt_sentence_vocab.yml  gpt_translate_to_eng.yml  gpt_vocab_note_ger.yml  remove_pitch.yml  replace_all_except_first_3_lines.yml  replace_bold.yml  replace_english_empty_line.yml  replace_highlight.yml  replace_italic.yml  replace_kanji_meaning_cleanup.yml  replace_md_bullet_cheap.yml  replace_md_headers.yml  replace_no_pitch.yml  replace_round_furigana_with_square.yml  replace_side_separator.yml  replace_via_csv.yml  replace_wikilink.yml  swap_fields_kanji_meaning.yml  swap_fields_tmp.yml  trim_list_items_default.yml
example_configs/: add_image_example.yml  add_tts_example.yml  gpt_example.yml  replace_example.yml  replace_md_example.yml
res/: kanji-keywords-6th-edition.csv
scripts/: anki-patcher.sh  process_ sentence_inbox.sh  process_ vocab_inbox.sh  process_inboxes.sh  process_sentence_inbox.sh  process_vocab_inbox.sh
